fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ html {
   font-size: 16px;
   font-family: 'Inter', sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @media (max-width: 640px) {
